# clang-highlight

./: AnnotatedToken.h  CMakeLists.txt  ClangHighlight.cpp  FuzzyAST.h  FuzzyASTPrinter.cpp  FuzzyParser.cpp  FuzzyType.h  Makefile  OutputWriter.cpp  OutputWriter.h  ParserHintCollector.cpp  TokenClassifier.cpp  TokenClassifier.h
Fuzzy/: AnnotatedToken.h  CMakeLists.txt  FuzzyAST.h  FuzzyASTPrinter.cpp  FuzzyParser.cpp
docs/: LibFuzzy.rst  clang-highlight.rst
fuzzy/: CMakeLists.txt  FuzzyAST.h
latex/: clanghighlight.sty  fuzzyparser.tex  sample.tex
unittests/: CMakeLists.txt  FuzzyParseTest.cpp
